Fixed code causing horizontal scrolling.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -127,6 +127,11 @@ pre {
   overflow-x: auto; /* add scrollbars to wide code blocks*/
 }
 
+.highlighter-rouge {
+   width: 98%;
+   margin: auto;
+}
+
 p > code,
 a > code,
 li > code,
